--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,4 +1,10 @@
 {
   "name": "Rider",
-  "app_id": ""
+  "app_id": "",
+  "proxies": [
+    {
+      "path": "/v1",
+      "proxyUrl": "https://maps.googleapis.com/maps/api/js?"
+    }
+  ]
 }
